# QML-Projects

./: README.md
NumConverter/: CMakeLists.txt  Main.qml  main.cpp
RandomDinner/: CMakeLists.txt  Main.qml  main.cpp
diceRoller/: CMakeLists.txt  DiceDelegate.qml  DiceModel.qml  Main.qml  main.cpp
loginComponent/: CMakeLists.txt  Login.qml  Main.qml  main.cpp
sqft-calculator/: CMakeLists.txt  Main.qml  main.cpp
